# lessons_template

./: .gitignore  pyproject.toml
lessons/: color.py  lines.py  main.py  stars.py
tests/: test_color.py
